arquivos html arrumados para a inserção dos gráficos

--- a/src/Templates/index.html
+++ b/src/Templates/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +14,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Concert+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
     
     <!-- Custom CSS -->
     <link rel="shortcut icon" href="/static/image/ico.ico" type="image/x-icon">       
@@ -25,7 +23,7 @@
 
 <body>
     <div class="cabecalho">
-        <img class="imagem" src="/static/image/image.png" alt="logo da equipe I9">
+        <img class="imagem" src="/static/image/image.png" height="90px" alt="logo da equipe I9">
         <h1 class="titulo bebas-neue-regular">PROJETO SMART FARM</h1>
         <!-- Botões de navegação -->
         <div class="flex">
@@ -37,6 +35,7 @@
             </a>
         </div>
     </div>
+    
     
     <!-- Linha separadora -->
     <div class="linha"></div>
@@ -52,15 +51,14 @@
                 <h2 class="texto concert-one-regular">
                     Este site possui algumas funcionalidades que podem ajudar os usuários a visualizar de uma maneira fácil os dados da estufa. Essas funcionalidades incluem: botões de navegação, botões para input de dados, e também botões para os filtros dos Gráficos. Bora conferir?
                     <div class="botaozinhome">
-                        <a href="graficos.html">
-                            <button type="button" class="btn btn-success botao archivo-black-regular">GRÁFICOS</button>
+                        <a class="botaohome" href="graficos.html">
+                            <button type="button" class="btn btn-success botao silkscreen-regular silkscreen-bold">GRÁFICOS</button>
                         </a>
                     </div>
                 </h2>
                 
             </div>
         </div>
-        <div class="rodapé"></div>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
