--- a/src/Templates/index.html
+++ b/src/Templates/index.html
@@ -19,6 +19,31 @@
     <link rel="shortcut icon" href="/static/image/ico.ico" type="image/x-icon">       
     <link rel="stylesheet" href="/static/css/styles.css">
     <link rel="stylesheet" href="/static/css/normalize.css">
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-q8i/X+965Dwz2I1xS9mBmPfFZkzNCGFb3ui1uzXfF/CpKHWB1k/8vI+JnMExKHkX" crossorigin="anonymous"></script>
+
+    <!-- Bootstrap Datepicker -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+    <!-- Arquivo de tradução para o idioma português -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.pt-BR.min.js"></script>
+
+    <script>
+        $(document).ready(function() {
+            // Inicializar o Datepicker com idioma em português
+            $('#filtro-calendario').datepicker({
+                format: "dd/mm/yyyy",
+                language: "pt-BR",
+                autoclose: true,
+                todayHighlight: true
+            });
+        });
+    </script>
+
 </head>
 
 <body>
@@ -36,34 +61,12 @@
         </div>
     </div>
     
-    
     <!-- Linha separadora -->
     <div class="linha"></div>
 
-    <div class="body">
-        <div class="flex2">
-            <!-- Imagem da estufa -->
-            <img src="/static/image/carousel1.webp" class="carrosel" alt="PROJETO">  
-            
-            <!-- Div para as informações -->
-            <div class="div">
-                <h1 class="subtitulo archivo-black-regular">FUNCIONALIDADES</h1>
-                <h2 class="texto concert-one-regular">
-                    Este site possui algumas funcionalidades que podem ajudar os usuários a visualizar de uma maneira fácil os dados da estufa. Essas funcionalidades incluem: botões de navegação, botões para input de dados, e também botões para os filtros dos Gráficos. Bora conferir?
-                    <div class="botaozinhome">
-                        <a class="botaohome" href="graficos.html">
-                            <button type="button" class="btn btn-success botao silkscreen-regular silkscreen-bold">GRÁFICOS</button>
-                        </a>
-                    </div>
-                </h2>
-                
-            </div>
-        </div>
+    <div class="selec_fil">
+        <button id="filtro-calendario" class="btn btn-success corbotão">Filtro</button>
+    </div>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-                crossorigin="anonymous"></script>
 </body>
-
 </html>
