Inclusão das variáveis de atualização

--- a/src/Templates/graficos.html
+++ b/src/Templates/graficos.html
@@ -78,7 +78,7 @@
     </div>
 
     <div class="atualização">
-        <h1 class="bebas-neue-regular">Atualizado em: dd/mm/aaaa <br> às hh:mm </h1>
+        <h1 class="bebas-neue-regular">Atualizado em: {{ultima_data}} <br> às {{ultima_hora}} </h1>
     </div>
 
     <!-- Rodapé -->
