--- a/src/Templates/index.html
+++ b/src/Templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estufa Artificial</title>
-    
+    <script src="/static/javascript/graficos-botao.js"></script>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -67,28 +67,20 @@
     <!-- Adicionando a grade 2x2 -->
     <div class="grid-2x2">
         <div class="grid-item">
-            <!-- Conteúdo do primeiro item da grade -->
-            <!-- Aqui você pode adicionar qualquer conteúdo que desejar -->
-            <h2>Item 1</h2>
-            <p>Conteúdo do primeiro item da grade.</p>
+            <h2>Temperatura</h2>
+            <p id="temperatura-media"></p>
         </div>
         <div class="grid-item">
-            <!-- Conteúdo do segundo item da grade -->
-            <!-- Aqui você pode adicionar qualquer conteúdo que desejar -->
-            <h2>Item 2</h2>
-            <p>Conteúdo do segundo item da grade.</p>
+            <h2>Umidade Solo</h2>
+            <p id="umidade-solo-media"></p>
         </div>
         <div class="grid-item">
-            <!-- Conteúdo do terceiro item da grade -->
-            <!-- Aqui você pode adicionar qualquer conteúdo que desejar -->
-            <h2>Item 3</h2>
-            <p>Conteúdo do terceiro item da grade.</p>
+            <h2>Umidade Ambiente</h2>
+            <p id="umidade-ambiente-media"></p>
         </div>
         <div class="grid-item">
-            <!-- Conteúdo do quarto item da grade -->
-            <!-- Aqui você pode adicionar qualquer conteúdo que desejar -->
-            <h2>Item 4</h2>
-            <p>Conteúdo do quarto item da grade.</p>
+            <h2>Volume da Água</h2>
+            <p id="volume-agua-media"></p>
         </div>
     </div>
 
