Titulos para site intuitivo

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -78,6 +78,9 @@
         </div>
     </div>
     <!-- Adicionando a grade 2x2 -->
+    <div class="media">
+        <h2>Médias</h2>
+    </div>
     <div class="grid-2x2">
         <div class="grid-item">
             <h2>Temperatura</h2>
@@ -99,6 +102,9 @@
 
     <div class="linha2"></div>
 
+    <div class="grafico">
+        <h2>Gráficos</h2>
+    </div>
     <div class="chart-grid">
         <div class="chart-container">
             <canvas id="temperature-chart"></canvas>
