--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,29 +9,29 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Concert+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
-    
 
-    <link rel="shortcut icon" href="/static/image/ico.ico" type="image/x-icon">       
+    <link rel="shortcut icon" href="/static/image/ico.ico" type="image/x-icon">
     <link rel="stylesheet" href="/static/css/styles.css">
     <link rel="stylesheet" href="/static/css/normalize.css">
 
-
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-q8i/X+965Dwz2I1xS9mBmPfFZkzNCGFb3ui1uzXfF/CpKHWB1k/8vI+JnMExKHkX" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-q8i/X+965Dwz2I1xS9mBmPfFZkzNCGFb3ui1uzXfF/CpKHWB1k/8vI+JnMExKHkX"
+        crossorigin="anonymous"></script>
 
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css"
+        rel="stylesheet">
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.pt-BR.min.js"></script>
-
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.pt-BR.min.js"></script>
 </head>
 
 <body>
@@ -38,30 +39,32 @@
         <img class="imagem" src="/static/image/image.png" height="50px" alt="logo da equipe I9">
         <h1 class="titulo bebas-neue-regular">PROJETO SMART FARM</h1>
     </div>
-    
 
     <div class="linha"></div>
 
     <div class="container text-center">
         <div class="selec_arq">
             <p>
-                <input type="file" class="btn btn-success corbotão" id="uploadBtn" accept=".csv" onchange="checkFileType(this)">
-                <label class="btn btn-success corbotão archivo-black-regular" for="uploadBtn"><img src="/static/image/upload.png" alt="icone de upload" height="40px"></label>
-                
+                <input type="file" class="btn btn-success corbotão" id="uploadBtn" accept=".csv"
+                    onchange="checkFileType(this)">
+                <label class="btn btn-success corbotão archivo-black-regular" for="uploadBtn"><img
+                        src="/static/image/upload.png" alt="icone de upload" height="40px"></label>
+
                 <script>
                     function checkFileType(input) {
                         const file = input.files[0];
-                        
+
                         if (file && !file.name.endsWith('.csv')) {
                             alert('Por favor, selecione apenas arquivos CSV!');
-                            input.value = ''; 
+                            input.value = '';
                         }
                     }
                 </script>
             </p>
         </div>
         <div class="selec_fil">
-            <button id="filtro-calendario" class="btn btn-success corbotão archivo-black-regular"><img src="/static/image/calendar.png" alt="icone de calendario" height="40px"></button>
+            <button id="filtro-calendario" class="btn btn-success corbotão archivo-black-regular"><img
+                    src="/static/image/calendar.png" alt="icone de calendario" height="40px"></button>
         </div>
     </div>
 
@@ -81,11 +84,11 @@
             </div>
         </div>
     </div>
-       
 
     <div class="media">
         <h2>Médias</h2>
     </div>
+
     <div class="grid-2x2">
         <div class="grid-item">
             <h2>Temperatura</h2>
@@ -110,6 +113,7 @@
     <div class="grafico">
         <h2>Gráficos</h2>
     </div>
+
     <div class="chart-grid">
         <div class="chart-container">
             <canvas id="temperature-chart"></canvas>
@@ -123,7 +127,7 @@
         <div class="chart-container">
             <canvas id="soil-moisture-chart"></canvas>
         </div>
-    </div>    
+    </div>
 
 
     <div class="atualização">
@@ -131,18 +135,16 @@
     </div>
 
     <div class="linha3"></div>
-    <div class="rodapé">
-        <p >Todos os direitos reservados: <a href="https://github.com/team-i9" class="time">Team-I9</a></p>
-    </div> 
 
+    <div class="rodapé">
+        <p>Todos os direitos reservados: <a href="https://github.com/team-i9" class="time">Team-I9</a></p>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-    
-    
 </body>
+
 </html>
